--- a/package.json
+++ b/package.json
@@ -11,9 +11,5 @@
   "dependencies": {
     "esbuild": "^0.14.2"
   },
-  "devDependencies": {
-    "elm": "^0.19.1-5",
-    "elm-format": "^0.8.5",
-    "elm-test": "^0.19.1-revision7"
-  }
+  "devDependencies": {}
 }
