--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node ./build.js",
+    "dev": "node ./build.js --watch",
     "postinstall": "elm-tooling install"
   },
   "author": "",
@@ -14,6 +15,7 @@
   },
   "devDependencies": {
     "elm-tooling": "^1.7.0",
+    "esbuild-dev-server": "^0.3.0",
     "esbuild-plugin-elm": "^0.0.7"
   }
 }
