--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "esbuild": "^0.14.2"
   },
   "devDependencies": {
+    "elm": "^0.19.1-5",
     "elm-tooling": "^1.7.0",
     "esbuild-dev-server": "^0.3.0",
     "esbuild-plugin-elm": "^0.0.7"
